--- a/client/package.json
+++ b/client/package.json
@@ -3,18 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.2.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.3.5",
     "axios": "^0.19.2",
     "http-proxy-middleware": "^1.0.4",
-<<<<<<< HEAD
     "node-sass": "^4.14.1",
-=======
->>>>>>> 564a7dc95486edd51dfb569a22b43ec25e7e4607
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.0.1",
     "react-kakao-login": "^1.2.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
