--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"cookie-parser": "^1.4.5",
 		"express": "^4.17.1",
 		"jsonwebtoken": "^8.5.1",
-		"mongoose": "^5.9.19"
+		"mongoose": "^5.9.19",
+		"multer": "^1.4.2"
 	},
 	"devDependencies": {
 		"concurrently": "^5.2.0",
