--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^5.1.1",
     "sweetalert": "^2.1.2"
   },
   "scripts": {
