--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"express": "^4.17.1",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.9.19",
-		"multer": "^1.4.2"
+		"multer": "^1.4.2",
+		"react-image-gallery": "^1.0.7"
 	},
 	"devDependencies": {
 		"concurrently": "^5.2.0",
