--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.9.19",
 		"multer": "^1.4.2",
-		"react-image-gallery": "^1.0.7"
+		"react-image-gallery": "^1.0.7",
+		"react-paypal-express-checkout": "^1.0.5"
 	},
 	"devDependencies": {
 		"concurrently": "^5.2.0",
