--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-image-gallery": "^1.0.7",
     "react-kakao-login": "^1.2.2",
     "react-modal": "^3.11.2",
+    "react-paypal-express-checkout": "^1.0.5",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
