--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
 		"multer": "^1.4.2",
 		"react-image-gallery": "^1.0.7",
 		"react-paypal-express-checkout": "^1.0.5",
-		"react-scroll": "^1.8.0"
+		"react-scroll": "^1.8.0",
+		"redis": "^3.0.2"
 	},
 	"devDependencies": {
 		"concurrently": "^5.2.0",
