--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "redux": "^4.0.5",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
+    "sanitize-html": "^1.27.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.1.1",
     "sweetalert": "^2.1.2"
